[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/dashboard/widget_chart/widget_chart.gd" type="Script" id=1]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform vec2 grid_divisions = vec2(5.0);
uniform vec4 grid_color :  hint_color = vec4(0.14,0.14,0.2, 1.0);
uniform vec2 size = vec2(1832.0, 1000.0);
uniform float line_width = 3.0;
uniform float zero_position = 0.0;

void fragment(){
	vec2 px_size = 1.0/size;
	vec2 coord = fract((UV - vec2(0.0, zero_position)) * grid_divisions);
	vec2 step_width = 1.0 - (px_size * line_width * grid_divisions);
	COLOR = grid_color * clamp(step(step_width.y, coord.y) + step(step_width.x, coord.x) + step(step_width.y, abs(1.0-coord.y)) + step(step_width.x, abs(1.0-coord.x)), 0.0, 1.0);
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/grid_divisions = Vector2( 5, 5 )
shader_param/grid_color = Color( 1, 1, 1, 0.0392157 )
shader_param/size = Vector2( 1859, 1003 )
shader_param/line_width = 1.0
shader_param/zero_position = 0.0

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	vec3 color_fix = clamp(color.rgb/color.a, 0., 10.);
	COLOR = vec4(color_fix,color.a);
}
"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="ViewportTexture" id=7]
flags = 4
viewport_path = NodePath("Viewport")

[node name="Chart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 1 )
data_type = 1
widget_type_id = "Chart"
max_data_sources = 10
supported_types = [ 0 ]
x_range = 100.0
divisions = Vector2( 4, 8 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "PanelWidgetBackground"

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 50, 50 )
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_snap_controls_to_pixels = false

[node name="GridContainer" type="Control" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="YLabels" type="Control" parent="Viewport/GridContainer"]
anchor_bottom = 1.0
margin_right = 43.0
margin_bottom = -59.0

[node name="Grid" type="ColorRect" parent="Viewport/GridContainer"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -60.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="ColorRect" type="ColorRect" parent="Viewport/GridContainer/Grid"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0470588, 0.0941176, 0.133333, 1 )

[node name="Marker" type="Line2D" parent="Viewport/GridContainer/Grid"]
visible = false
show_behind_parent = true
position = Vector2( 41, -10 )
points = PoolVector2Array( 0, 0, 0, 10000 )
width = 1.0
default_color = Color( 0.537255, 0.819608, 0.945098, 0.470588 )
texture_mode = 2

[node name="GraphArea" type="Control" parent="Viewport/GridContainer/Grid"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRect" type="ReferenceRect" parent="Viewport/GridContainer/Grid"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
border_color = Color( 0.0588235, 0.2, 0.337255, 1 )
border_width = 2.0
editor_only = false

[node name="XLabels" type="HBoxContainer" parent="Viewport/GridContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = -59.0
margin_right = -3.0
custom_constants/separation = 0

[node name="Grid" type="TextureRect" parent="."]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 7 )
expand = true

[node name="LegendPosition" type="Control" parent="Grid"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -3.0
margin_right = 56.0
margin_bottom = -3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupLegend" type="PanelContainer" parent="CanvasLayer"]
visible = false
self_modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
theme_type_variation = "PanelPopup"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupLegend"]
margin_left = 6.0
margin_top = 2.0
margin_right = 8.0
margin_bottom = 2.0
mouse_filter = 2
size_flags_vertical = 0

[node name="TimeLabel" type="Label" parent="CanvasLayer/PopupLegend/VBoxContainer"]
margin_right = 40.0
margin_bottom = 21.0

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PopupLegend/VBoxContainer"]
margin_right = 40.0
margin_bottom = 4.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PopupLegend/VBoxContainer"]
margin_left = -6.0
margin_top = -2.0
margin_right = 34.0
margin_bottom = 38.0
columns = 2

[node name="UpdateTween" type="Tween" parent="."]

[connection signal="resized" from="." to="." method="_on_Grid_resized"]
[connection signal="mouse_entered" from="Grid/LegendPosition" to="." method="_on_Grid_mouse_entered"]
[connection signal="mouse_exited" from="Grid/LegendPosition" to="." method="_on_Grid_mouse_exited"]
